# warehouse

./: .gitmodules  README.md
.insomnia/ApiSpec/: spc_3d25b1e57f37419da2d824390dc224b7.yml
.insomnia/Environment/: env_bb0a96465865d3b632252232fead945ffb581996.yml
.insomnia/Request/: req_0bd42c8391a64746bea8ab3dfe91acbb.yml  req_475aeb246d8348a5883f2ed78f10d6f5.yml  req_5aadb2d5ff894ea396d3fb1ce83913dc.yml  req_de601861b98948a0bbad9d807c0ee516.yml  req_f0770a6d42cf4325b1d1fcafa749af87.yml
.insomnia/UnitTestSuite/: uts_7a9f153ae4504d8e894489f493a59077.yml
.insomnia/Workspace/: wrk_441ed85ad60041b9a697afe463b8c632.yml
services/: .env  docker-compose.yaml
services/load-tests/: create-transactions.js  dotnet-core-release.js  dotnet-core.js  go-create-category.js  go-get-categories.js  go-get-transaction.js  go-get-transactions.js  go.js  rust-salvo-get-categories.rs  rust-salvo-get-category.rs  rust-salvo.rs  ts-hapi.js
services/stock-dotnet/: DbContext.cs  Program.cs  Stock.csproj  appsettings.Development.json
services/stock-go-codegen/: go.mod  go.sum
services/stock-go-gin/: .gitignore  go.mod  main.go
services/stock-go-http/: .gitignore  go.mod  go.sum  main.go  model.go  (+5 more)
services/stock-rust/: .gitignore  Cargo.toml
services/stock-rust-salvo/: Cargo.toml
services/stock-rust-salvo/src/: diesel_repository.rs  lib.rs  main.rs  model.rs  models.rs  repository.rs  schema.rs  server.rs  service.rs  transport.rs
services/stock-rust-salvo/src/entity/: category.rs
services/stock-rust-salvo/src/repository/: diesel.rs
services/stock-rust-salvo/src/repository/sea/: query.rs
services/stock-rust-salvo/src/transport/: salvo.rs
services/stock-rust/migrations/2022-11-19-221932_create_categories/: up.sql
services/stock-rust/src/: main.rs  repository.rs  transport.rs
services/stock-rust/src/repository/: diesel.rs  sea.rs
services/stock-rust/src/repository/sea/: mutation.rs  query.rs
services/stock-rust/src/repository/sea/entity/: category.rs
services/stock-rust/src/transport/: actix.rs  salvo.rs
(+132 files in other folders)
