[package]
name = "stock-rust-salvo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
salvo = { version = "*", default-features = false, features = ["anyhow"] }
tokio = { version = "1.22", features = ["rt-multi-thread"] }
diesel = { version = "2.0", features = ["postgres", "uuid", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.16"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
bb8-diesel = "0.2.1"
bytes = "1"
snmalloc-rs = { version = "0.3", features = ["native-cpu","build_cc"] }
console-subscriber = "*"
futures = "0.3.25"
actix-web = "4"
async-trait = "0.1.59"
sea-orm = { version = "^0.9.0", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ] }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[profile.release]
lto = "thin"

